# osint-agent-network

./: .dockerignore  .env.example  .gitignore  DELIVERY_SUMMARY_2026-06-30.md  DEPLOYMENT_CUSTOMS_SUPPLY_CHAIN.md  DEPLOYMENT_INTELLIGENCE_FEATURES.md  DESIGN.md  EULA.md  N100_DEPLOYMENT_REPORT_2026-06-30.md  PROJECT_CLOSURE_MAINTENANCE_LOG.md  README.md  THIRD_PARTY_NOTICES.md  agent-manifest.json  agent_manifest_validator.py  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: agent_client.py  main.py
backend/scripts/: import_snapshot.py
backend/tests/: test_agent_auth.py  test_agent_client.py  test_agent_identity_auth.py  test_agent_manifest.py  test_agent_protocol.py  test_browser_auth.py  test_completion_policy.py  test_core.py  test_cross_verification.py  test_customs_api_route.py  test_customs_overlap.py  test_customs_supply_chain.py  test_environment_template.py  test_gap_to_tool_planner.py  test_graph.py  test_healthcheck_script.py  test_intel_gateway.py  test_intelligence_aggregation.py  test_intelligence_core_v2.py  test_intelligence_core_v3.py  test_intelligence_officer_core.py  test_intelligence_requirements.py  test_job_queue.py  test_llm_client.py  test_mcp_descriptor.py  test_osint_fusion.py  test_persistent_job_queue.py  test_production_readiness.py  test_public_release_check.py  test_quality_gate.py  test_real_acceptance.py  test_regression_smoke.py  test_release_artifacts.py  test_report_export.py  test_report_pdf_export.py  test_role_agents.py  test_runtime_inventory.py  test_safe_http.py  (+12 more)
(+246 files in other folders)
