[project]
name = "osint-agent-network-backend"
version = "0.1.0"
requires-python = ">=3.11"
license = "GPL-3.0-only"
dependencies = [
    "pypdf>=5.0.0",
    "reportlab>=4.2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]

[tool.pytest.ini_options]
pythonpath = [".", ".."]
testpaths = ["tests"]
